--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Pump App</title>
 <title>App</title>
 
-<script type="text/javascript" charset="utf-8" src="js/index.js"></script>
+<!--<script type="text/javascript" charset="utf-8" src="js/index.js"></script>-->
 
 <link href="css/jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="css/basic.css" rel="stylesheet" type="text/css"/>
@@ -13,26 +13,7 @@
 <script src="js/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
 
 
-<script type="text/javascript">
-$(document).ready(function() 
-{
-	$('#b_login').click(function() {
-		 var usuario = $("#login_user").val();
-		 var clave = $("#login_pass").val();
-		 var new_salesman = $("#new_salesman").val();
-		 
-		 if(usuario == "Marco" && clave == "demetrio"){
-			window.location.href ="#menu";
-			
-		 }else{
-			 alert("A ingresado mal el nombre de usuario o la pass");
-		 }
-})    
-});
-
-
-
-</script>
+<script src="js/main.js" type="text/javascript" /></script>
 
 
 </head> 
