--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <input type="text" name="ti_pass" id="ti_pass" value="" placeholder="Password" />
             </div>
       <!--      <button id="b_enviar_user">Submit</button>  -->
-            <a href="#welcome" data-role="button">Submit</a>
+            <a href="#menu" data-role="button">Submit</a>
   	</center>
   </div>
 </div>
