--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 	
 	$("#b_new_pump").click(function(e) {
 		 
-		 alert("Submit");
-		 window.location.href = "#menu";
+		 alert("Send");
+		 window.location.href ="#menu";
+		 $.mobile.changePage("#menu");
 		 
 	});
 	   
