--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			 
 			 if(usuario == "admin" && clave == "123456"){
 				window.location.href ="#menu";
-			//	$.mobile.changePage("#menu");
+				$.mobile.changePage("#menu");
 				
 			 }else{
 				 alert("A ingresado mal el nombre de usuario o la pass");
@@ -29,7 +29,7 @@
 		});
 	
 	$("#b_new_pump").click(function(e) {
-		 
+		 navigator.notification.alert("Send File");
 		 alert("Send");
 		 window.location.href ="#menu";
 		 $.mobile.changePage("#menu");
