--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		});
 	
 	$("#b_new_pump").click(function(e) {
-		 navigator.notification.alert("Send File");
+		// navigator.notification.alert("Send File");
 		 alert("Send");
 		 window.location.href ="#menu";
 		 $.mobile.changePage("#menu");
